populating arrays with templates

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -81,25 +81,40 @@ also cause a white space at bottom because now contributes to the height-->
     <div class="cloud9-item">
                               <div class="aCard">
                                 <div class="topRightProjectTechnologiesArea">
-          <form class="formTechBtn" action="/carousel" method="get">
-            <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                                                  <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-    </button>
-    </form>
+
                                         </div>
 
                                 <div class="aCardWritingArea">
                                       <div class="projectTitle">"TEMPLATE!!!!!"</div>
                                               <img class="projectImage " src="" alt="projectImg">
-                                       <div class="projectDescriptionSubtitle">TEMPLATE!!!!!!!!</div>
+                                       <div class="projectDescriptionSubtitle">Description</div>
                                        <div class="projectDescriptionText">TEMPLATE!!!!!!!!!!!!!!!</div>
                                   </div>
                                    <div class="cardHyperlinksArea">
-                                         <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+
                                     </div>
                         </div>
     </div>
   </template>
+
+  <template id="cardTechnologyButtonTemplate">
+
+    <form class="formTechBtn" action="/carousel" method="get">
+    <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                            <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+    </button>
+    </form>
+
+  </template>
+
+  <template id="cardHyperlinkTemplate">
+
+<a class="hyperlinkAnchor" href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+
+  </template>
+
+
+
 <section class="carouselOverlay  carouselDisplayNone"   > <!--carouselDisplayNone causes the cards to be in wrong place-->
 
   <div class="carouselOverlayBackground"></div>
@@ -108,259 +123,7 @@ also cause a white space at bottom because now contributes to the height-->
 <div class="wrap">
   <div id="showcase" class="noselect">
 
-    <div class="cloud9-item">
-                              <div class="aCard">
-                                <div class="topRightProjectTechnologiesArea">
-          <form class="formTechBtn" action="/carousel" method="get">
-            <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                                                  <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-    </button>
-    </form>
-                                        </div>
 
-                                <div class="aCardWritingArea">
-                                      <div class="projectTitle">"Project"</div>
-                                              <img class="projectImage " src="" alt="projectImg">
-                                       <div class="projectDescriptionSubtitle">Description</div>
-                                       <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
-                                  </div>
-                                   <div class="cardHyperlinksArea">
-                                         <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
-                                    </div>
-                        </div>
-    </div>
-
-    <div class="cloud9-item">
-      <div class="aCard">
-        <div class="topRightProjectTechnologiesArea">
-  <form class="formTechBtn" action="/carousel" method="get">
-  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-  </button>
-  </form>
-                </div>
-
-        <div class="aCardWritingArea">
-              <div class="projectTitle">"Project"</div>
-                      <img class="projectImage " src="" alt="projectImg">
-               <div class="projectDescriptionSubtitle">Description</div>
-               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
-          </div>
-           <div class="cardHyperlinksArea">
-                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
-            </div>
-  </div>
-    </div>
-    <div class="cloud9-item">
-      <div class="aCard">
-        <div class="topRightProjectTechnologiesArea">
-  <form class="formTechBtn" action="/carousel" method="get">
-  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-  </button>
-  </form>
-                </div>
-
-        <div class="aCardWritingArea">
-              <div class="projectTitle">"Project"</div>
-                      <img class="projectImage " src="" alt="projectImg">
-               <div class="projectDescriptionSubtitle">Description</div>
-               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
-          </div>
-           <div class="cardHyperlinksArea">
-                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
-            </div>
-  </div>
-    </div>
-    <div class="cloud9-item">
-      <div class="aCard">
-        <div class="topRightProjectTechnologiesArea">
-  <form class="formTechBtn" action="/carousel" method="get">
-  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-  </button>
-  </form>
-                </div>
-
-        <div class="aCardWritingArea">
-              <div class="projectTitle">"Project"</div>
-                      <img class="projectImage " src="" alt="projectImg">
-               <div class="projectDescriptionSubtitle">Description</div>
-               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
-          </div>
-           <div class="cardHyperlinksArea">
-                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
-            </div>
-  </div>
-    </div>
-    <div class="cloud9-item">
-      <div class="aCard">
-        <div class="topRightProjectTechnologiesArea">
-  <form class="formTechBtn" action="/carousel" method="get">
-  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-  </button>
-  </form>
-                </div>
-
-        <div class="aCardWritingArea">
-              <div class="projectTitle">"Project"</div>
-                      <img class="projectImage " src="" alt="projectImg">
-               <div class="projectDescriptionSubtitle">Description</div>
-               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
-          </div>
-           <div class="cardHyperlinksArea">
-                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
-            </div>
-  </div>
-    </div>
-    <div class="cloud9-item">
-      <div class="aCard">
-        <div class="topRightProjectTechnologiesArea">
-  <form class="formTechBtn" action="/carousel" method="get">
-  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-  </button>
-  </form>
-                </div>
-
-        <div class="aCardWritingArea">
-              <div class="projectTitle">"Project"</div>
-                      <img class="projectImage " src="" alt="projectImg">
-               <div class="projectDescriptionSubtitle">Description</div>
-               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
-          </div>
-           <div class="cardHyperlinksArea">
-                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
-            </div>
-  </div>
-    </div>
-    <div class="cloud9-item">
-      <div class="aCard">
-        <div class="topRightProjectTechnologiesArea">
-  <form class="formTechBtn" action="/carousel" method="get">
-  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-  </button>
-  </form>
-                </div>
-
-        <div class="aCardWritingArea">
-              <div class="projectTitle">"Project"</div>
-                      <img class="projectImage " src="" alt="projectImg">
-               <div class="projectDescriptionSubtitle">Description</div>
-               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
-          </div>
-           <div class="cardHyperlinksArea">
-                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
-            </div>
-  </div>
-    </div>
-    <div class="cloud9-item">
-      <div class="aCard">
-        <div class="topRightProjectTechnologiesArea">
-  <form class="formTechBtn" action="/carousel" method="get">
-  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-  </button>
-  </form>
-                </div>
-
-        <div class="aCardWritingArea">
-              <div class="projectTitle">"Project"</div>
-                      <img class="projectImage " src="" alt="projectImg">
-               <div class="projectDescriptionSubtitle">Description</div>
-               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
-          </div>
-           <div class="cardHyperlinksArea">
-                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
-            </div>
-  </div>
-    </div>
-    <div class="cloud9-item">
-      <div class="aCard">
-        <div class="topRightProjectTechnologiesArea">
-  <form class="formTechBtn" action="/carousel" method="get">
-  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-  </button>
-  </form>
-                </div>
-
-        <div class="aCardWritingArea">
-              <div class="projectTitle">"Project"</div>
-                      <img class="projectImage " src="" alt="projectImg">
-               <div class="projectDescriptionSubtitle">Description</div>
-               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
-          </div>
-           <div class="cardHyperlinksArea">
-                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
-            </div>
-  </div>
-    </div>
-    <div class="cloud9-item">
-      <div class="aCard">
-        <div class="topRightProjectTechnologiesArea">
-  <form class="formTechBtn" action="/carousel" method="get">
-  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-  </button>
-  </form>
-                </div>
-
-        <div class="aCardWritingArea">
-              <div class="projectTitle">"Project"</div>
-                      <img class="projectImage " src="" alt="projectImg">
-               <div class="projectDescriptionSubtitle">Description</div>
-               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
-          </div>
-           <div class="cardHyperlinksArea">
-                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
-            </div>
-  </div>
-    </div>
-    <div class="cloud9-item">
-      <div class="aCard">
-        <div class="topRightProjectTechnologiesArea">
-  <form class="formTechBtn" action="/carousel" method="get">
-  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-  </button>
-  </form>
-                </div>
-
-        <div class="aCardWritingArea">
-              <div class="projectTitle">"Project"</div>
-                      <img class="projectImage " src="" alt="projectImg">
-               <div class="projectDescriptionSubtitle">Description</div>
-               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
-          </div>
-           <div class="cardHyperlinksArea">
-                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
-            </div>
-  </div>
-    </div>
-    <div class="cloud9-item">
-      <div class="aCard">
-        <div class="topRightProjectTechnologiesArea">
-  <form class="formTechBtn" action="/carousel" method="get">
-  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
-  </button>
-  </form>
-                </div>
-
-        <div class="aCardWritingArea">
-              <div class="projectTitle">"Project"</div>
-                      <img class="projectImage " src="" alt="projectImg">
-               <div class="projectDescriptionSubtitle">Description</div>
-               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
-          </div>
-           <div class="cardHyperlinksArea">
-                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
-            </div>
-  </div>
-    </div>
   </div>
   <button class="nav noselect left">
     &lt;
