pg3 when triggers populating of pg4 tells cards to resize

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -115,9 +115,9 @@ also cause a white space at bottom because now contributes to the height-->
 
   </template>
 
+<!--carouselDisplayNone causes the cards to be in wrong place-->
 
-
-<section class="carouselOverlay  carouselDisplayNone"   > <!--carouselDisplayNone causes the cards to be in wrong place-->
+<section class="carouselOverlay  carouselDisplayNone"   >
 
   <div class="carouselOverlayBackground"></div>
 
