--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1304,10 +1304,10 @@ visibility:inherit;
   text-align: center;
   /*background: pink;*/
   position: relative;
-  /* left: 50%;
-  top: 50%; */
-  transform: translate(0%, 0%);left:0;top:0;
-  /*  transform: translate(-50%, -50%);*/
+
+/*  transform: translate(0%, 0%);left:0;top:0; */
+/*  transform: translate(-50%, -50%);left:50%;top:50%;*/
+    transform: translate(-50%, 0%);left:50%;top:0%;
   transform-origin: center center;
 
 
