--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -485,6 +485,11 @@ in 4.3.1 need use order and offset
 
                             <div class="aCard">
                               <div class="topRightProjectTechnologiesArea">
+                                <!--the decorative-->
+                                <form class="formTechOrnament">
+         <button class="submitButtonNoStyleOrnament">
+<div class="fontOrnamentTech">o</div>
+</button></form>
                                 <% for (let i = 0; i<page3SecondBestCard.technologiesArray.length; i++) { %>
 
                                   <form class="formTechBtn" action="/carousel" method="get">
@@ -524,7 +529,11 @@ in 4.3.1 need use order and offset
 <div class="scaleable-wrapper" >
                           <div class="aCard">
                             <div class="topRightProjectTechnologiesArea">
-
+                              <!--the decorative-->
+                              <form class="formTechOrnament">
+                            <button class="submitButtonNoStyleOrnament">
+                            <p class="fontOrnamentTech">o</p>
+                          </button></form>
                                <!--loop throough the number of tech items-->
                                                                <% for (let i = 0; i<page3ThirdBestCard.technologiesArray.length; i++) { %>
 
@@ -569,7 +578,11 @@ in 4.3.1 need use order and offset
 <div class="scaleable-wrapper" >
                           <div class="aCard">
                             <div class="topRightProjectTechnologiesArea">
-
+                              <!--the decorative-->
+                              <button class="formTechOrnament">
+                            <form class="submitButtonNoStyleOrnament">
+                            <p class="fontOrnamentTech">o</p>
+                          </button></form>
 
                                <!--loop throough the number of tech items-->
                                                                <% for (let i = 0; i<page3FourthBestCard.technologiesArray.length; i++) { %>
