tried out various background images sorted them

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1287,7 +1287,9 @@ visibility:inherit;
 
 .aCard{
 
-  background:beige;
+background-image: url(/Images/cardTextures/favourites/w1.jpg);
+
+  background-repeat:repeat;
 
 
   width:125px;
