--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -81,10 +81,16 @@ also cause a white space at bottom because now contributes to the height-->
     <div class="cloud9-item">
       <div class="scaleable-wrapper" >
                               <div class="aCard">
-                                <div class="topRightProjectTechnologiesArea">
+                                <div class="topRightRibbonArea">
+
+
+<div class="topRightProjectTechnologiesArea">
 
                                         </div>
+                                        <div class="ribbonEnd">
 
+                                        </div>
+                                      </div>
                                 <div class="aCardWritingArea">
                                       <div class="projectTitle">"TEMPLATE!!!!!"</div>
                                               <img class="projectImage " src="" alt="projectImg">
@@ -215,7 +221,10 @@ maybe even ajoining a space for the marble
 
 <div class="scaleable-wrapper" >
           <div class="aCard">
-            <div class="topRightProjectTechnologiesArea">
+            <div class="topRightRibbonArea">
+
+
+<div class="topRightProjectTechnologiesArea">
               <% for (let i = 0; i<page2BestCard.technologiesArray.length; i++) { %>
 <form class="formTechBtn" action="/carousel" method="get">
   <button class="submitButtonNoStyle" type="submit" name="techButton" value=<%= page2BestCard.technologiesArray[i].technologyName %> >
@@ -225,7 +234,10 @@ maybe even ajoining a space for the marble
              </form>
 
 <% }%></div>
+<div class="ribbonEnd">
 
+</div>
+</div>
 
 
 
@@ -484,7 +496,13 @@ in 4.3.1 need use order and offset
 <div class="scaleable-wrapper" >
 
                             <div class="aCard">
-                              <div class="topRightProjectTechnologiesArea">
+                              <div class="topRightRibbonArea">
+
+
+
+
+
+<div class="topRightProjectTechnologiesArea">
                                 <!--the decorative-->
                                 <form class="formTechOrnament">
          <button class="submitButtonNoStyleOrnament">
@@ -499,7 +517,10 @@ in 4.3.1 need use order and offset
                                 </form>
 <% }%>
                           </div>
+                          <div class="ribbonEnd">
 
+                          </div>
+  </div>
 
 
                               <div class="aCardWritingArea">
@@ -528,7 +549,10 @@ in 4.3.1 need use order and offset
 
 <div class="scaleable-wrapper" >
                           <div class="aCard">
-                            <div class="topRightProjectTechnologiesArea">
+                            <div class="topRightRibbonArea">
+
+
+<div class="topRightProjectTechnologiesArea">
                               <!--the decorative-->
                               <form class="formTechOrnament">
                             <button class="submitButtonNoStyleOrnament">
@@ -546,8 +570,10 @@ in 4.3.1 need use order and offset
 
                                <% }%></div>
 
+<div class="ribbonEnd">
 
-
+</div>
+</div>
                             <div class="aCardWritingArea">
 
                             <div class="projectTitle"><%=page3ThirdBestCard.projectName%></div>
@@ -577,7 +603,10 @@ in 4.3.1 need use order and offset
 
 <div class="scaleable-wrapper" >
                           <div class="aCard">
-                            <div class="topRightProjectTechnologiesArea">
+                            <div class="topRightRibbonArea">
+
+
+<div class="topRightProjectTechnologiesArea">
                               <!--the decorative-->
                               <button class="formTechOrnament">
                             <form class="submitButtonNoStyleOrnament">
@@ -595,7 +624,10 @@ in 4.3.1 need use order and offset
                                                               </form>
                                <% }%></div>
 
+                               <div class="ribbonEnd">
 
+                               </div>
+                             </div>
 
 
 
