--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1493,46 +1493,52 @@ margin-right: auto;
 
 
 /* content:"";*/
- display:block;
+ display:inline-block;
 position:static;
    bottom:4px;
   height:15px;
  width:auto;
   margin:0 auto 0 2px;
-padding:0 ;
+
   overflow:hidden;
   vertical-align: top;
   text-align: left;
   font-size:0;
     box-shadow:  0 0 20px 0    yellow;
-    background:transparent;
+      /*background-color: #262626; because images have transparencys doesnt work*/
+background-color: rgba(255, 255, 0, .4);;
+      outline:black;
+    float:left;
 }
 /*these two effecting the same element*/
 .cardHyperlinksImg{
 
-width:15px;
+width:18px;
 height:15px;
 display: inline;
 font-size:0;
 /*margin-left: auto;
 margin-right: auto;*/
   overflow:hidden;
-
+padding:0 2px;
 vertical-align: top;
   border-radius:50%;
-}
 
+}
+/*
 .cardHyperlinkImg img{
 vertical-align: top;
   max-width: 100%;
   max-height: 100%;}
-
+  */
+/*why does this not have own class!!!*/
 a{
 
   display:inline-block;margin:0; padding:0;text-align: left; height:inherit;font-size:inherit;
 
-  width:15px;
+  width:18px;
   height:15px;
+
 
 }
 /*Carousel Stylings*/
