--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -109,7 +109,7 @@ also cause a white space at bottom because now contributes to the height-->
 
     <form class="formTechBtn" action="/carousel" method="get">
     <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
-                                            <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+                                            <Img class="cardTechlinksImg" src= "" alt="gitLink">
     </button>
     </form>
 
@@ -117,7 +117,7 @@ also cause a white space at bottom because now contributes to the height-->
 
   <template id="cardHyperlinkTemplate">
 
-<a class="hyperlinkAnchor" href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+<a class="hyperlinkAnchor" href="j"> <Img class="cardTechlinksImg"  alt="gitLink"> </a>
 
   </template>
 
@@ -229,7 +229,7 @@ maybe even ajoining a space for the marble
 <form class="formTechBtn" action="/carousel" method="get">
   <button class="submitButtonNoStyle" type="submit" name="techButton" value=<%= page2BestCard.technologiesArray[i].technologyName %> >
 
-             <Img class="cardHyperlinksImg" src= <%=page2BestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
+             <Img class="cardTechlinksImg" src= <%=page2BestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
              </button>
              </form>
 
@@ -508,7 +508,7 @@ in 4.3.1 need use order and offset
 
                                   <form class="formTechBtn" action="/carousel" method="get">
                                     <button class="submitButtonNoStyle" type="submit" name="techButton" value=<%= page3SecondBestCard.technologiesArray[i].technologyName %> >
-                                  <img type="image" class="cardHyperlinksImg" src= <%=page3SecondBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
+                                  <img type="image" class="cardTechlinksImg" src= <%=page3SecondBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
                                 </button>
                                 </form>
 <% }%>
@@ -556,7 +556,7 @@ in 4.3.1 need use order and offset
 <form class="formTechBtn" action="/carousel" method="get">
 
   <button class="submitButtonNoStyle" type="submit" name="techButton" value=<%= page3ThirdBestCard.technologiesArray[i].technologyName %> >
-                                                              <Img class="cardHyperlinksImg" src= <%=page3ThirdBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
+                                                              <Img class="cardTechlinksImg" src= <%=page3ThirdBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
 </button>
 </form>
 
@@ -599,7 +599,7 @@ in 4.3.1 need use order and offset
 
 
 <div class="topRightProjectTechnologiesArea">
-                        
+
 
                                <!--loop throough the number of tech items-->
                                                                <% for (let i = 0; i<page3FourthBestCard.technologiesArray.length; i++) { %>
@@ -607,7 +607,7 @@ in 4.3.1 need use order and offset
 
                                                                  <form class="formTechBtn" action="/carousel" method="get">
                                                                    <button class="submitButtonNoStyle" type="submit" name="techButton" value=<%= page3FourthBestCard.technologiesArray[i].technologyName %> >
-                                                              <Img class="cardHyperlinksImg" src= <%=page3FourthBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
+                                                              <Img class="cardTechlinksImg" src= <%=page3FourthBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
                                                               </button>
                                                               </form>
                                <% }%></div>
