--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1312,7 +1312,23 @@ visibility:inherit;
     transform: translate(-50%, 0%);left:50%;top:0%;
   transform-origin: center center;
 
+/*  position:absolute;*/ /*z-index:inherit;*//*added to help shadow layering*/
+     transform-style: preserve-3d; /*dirty stacking sollution*/
+}
+.aCard::after{
 
+  position:absolute;
+  content:"";
+  font-size:0;
+  width:80%;
+  height:80%;
+  right:1px;
+   bottom:1px;
+  box-shadow: 0px 0px 3px 3px white, 1px 1px 3px 3px black;
+z-index:-1;
+
+    transform: rotate(3deg);
+   transform: translateZ(-1px); /*dirty stacking sollution to get pseudo under acard*/
 }
 
 .aCardTechFontOrnament {
